--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Welcome Back</h2>
+    <h2>Sign in with MeterReader+ Account</h2>
     <form id="signin-form">
       <input type="email" id="email" placeholder="Email Address" required />
       <input type="password" id="password" placeholder="Password" required />
