--- a/meterentry.html
+++ b/meterentry.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meter Entry</title>
+  <title>Enter Meter Reading</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Helvetica Neue", Helvetica, Arial, sans-serif;
       background: #ffffff;
-      color: #333333;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -46,7 +45,7 @@
       padding: 12px 20px;
       border: none;
       border-radius: 8px;
-      background: #4a90e2; /* Blue button background */
+      background: #4caf50;
       color: #ffffff;
       cursor: pointer;
       font-size: 16px;
@@ -54,37 +53,35 @@
       transition: background 0.3s ease;
     }
     button:hover {
-      background: #0061cc; /* Darker blue on hover */
+      background: #087f23;
     }
   </style>
 </head>
 <body>
-  <h1>Enter Your Meter Reading</h1>
+  <h1>Enter Meter Reading</h1>
   <p id="meter-info">Loading Meter Information...</p>
   <input type="number" id="reading" placeholder="Enter new reading" />
   <button id="submit-reading">Submit Reading</button>
 
   <script>
+    // Get the meterId from the URL query string
     const urlParams = new URLSearchParams(window.location.search);
     const meterId = urlParams.get('meterId');
     const meterInfo = document.getElementById('meter-info');
     meterInfo.textContent = `Meter ID: ${meterId}`;
 
+    // Submit reading logic
     document.getElementById('submit-reading').addEventListener('click', () => {
       const reading = document.getElementById('reading').value;
       if (reading) {
-        alert(`Reading submitted: ${reading}`);
-        // Submit logic can be added here
-
-        // Redirect back to the QR scanner page after submitting
-        window.location.href = 'qrscanner.html'; // Make sure qrscanner.html exists and is the correct path
+        alert(`Reading submitted for Meter ID: ${meterId}: ${reading}`);
+        // You can send the reading to your server here for storage
+        // For example, sending it via a fetch request to the server
+        // fetch('/submit-reading', { method: 'POST', body: JSON.stringify({ meterId, reading }) })
       } else {
-        alert('Please enter a valid reading.');
+        alert('Please enter a reading');
       }
     });
   </script>
 </body>
 </html>
-
-
-
