--- a/pc1oven.html
+++ b/pc1oven.html
@@ -64,7 +64,7 @@
   <button id="submit-reading">Submit Reading</button>
 
   <script>
-    const apiUrl = 'https://i41pwdl3w0.execute-api.us-east-1.amazonaws.com/default/SendMeterReading'; // Replace with your API Gateway endpoint
+    const apiUrl = 'https://5a6tilfrta.execute-api.eu-west-2.amazonaws.com/default/sendMeterRead'; // Replace with your API Gateway endpoint
 
     document.getElementById('submit-reading').addEventListener('click', async () => {
       const reading = document.getElementById('reading').value;
