--- a/pc1oven.html
+++ b/pc1oven.html
@@ -16,6 +16,14 @@
       justify-content: center;
       height: 100vh;
     }
+    .header {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #000000;
+    }
     h1 {
       font-size: 24px;
       margin-bottom: 10px;
@@ -58,6 +66,7 @@
   </style>
 </head>
 <body>
+  <div class="header">MeterReader+</div>
   <h1>Enter Meter Reading</h1>
   <p>PC1 Oven</p>
   <input type="number" id="reading" placeholder="Enter new reading" />
